fix(visual): set opacity: 0.5 for the better visibility for the text of class name (#464)

--- a/packages/mosaic-examples/mosaic/typography/typography-overview/typography-overview-example.css
+++ b/packages/mosaic-examples/mosaic/typography/typography-overview/typography-overview-example.css
@@ -1,5 +1,5 @@
 small {
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .typography-group {
